# stack-back

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.test.yaml  docker-compose.test2.yaml  docker-compose.yaml  stack-back.env.template
.github/: renovate.json
.github/workflows/: build-publish.yml  build-tag-release.yaml  pr-verify.yaml  python-tests.yml  tag-updates.yml
docs/: conf.py
docs/guide/: advanced.rst  configuration.rst  rcb.rst
src/: .dockerignore  Dockerfile  crontab  entrypoint.sh  pyproject.toml
src/restic_compose_backup/: backup_runner.py  cli.py  commands.py  config.py  containers.py  containers_db.py  cron.py  enums.py  log.py  restic.py  utils.py
src/restic_compose_backup/alerts/: __init__.py  base.py  discord.py  smtp.py
src/tests/: README.md  fixtures.py  tests.py
src/tests/integration/: README.md  __init__.py  conftest.py  test_all_compose_projects.py  test_database_backups.py  test_label_configuration.py  test_volume_backups.py
src/tests/unit/: __init__.py  conftest.py  fixtures.py  test_auto_backup_all.py  test_container_operations.py  test_database_configuration.py  test_volume_configuration.py
