[project]
name = "restic_compose_backup"
version = "0.0.0"
description = "Backup Docker Compose volumes and databases with Restic"
requires-python = ">=3.12"
dependencies = [
    'docker>=7.1.0',
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pytest>=7.4.0",
    "ruff>=0.12.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]

[project.scripts]
restic-compose-backup = "restic_compose_backup.cli:main"
rcb = "restic_compose_backup.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["restic_compose_backup"]
